recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:4: error: not found: value legnth
		avance(legnth)
                       ^